# factorio-recipe-graph

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  api.md  data_pipeline.md  development.md  examples.md  index.md  installation.md  overview.md  usage.md
examples/: inspect_raw_data.py
scripts/: build_base_recipes.py
src/factorio_recipe_graph/: __init__.py  graph.py  models.py  rates.py  raw_data.py  schemas.py  serializers.py
src/factorio_recipe_graph/data/: __init__.py  base_recipes.json  entities.json  recipes.json
tests/: test_base_recipes.py  test_graph.py  test_models.py  test_rates.py  test_serializers.py
