[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "factorio-recipe-graph"
version = "0.1.0"
description = "Build hierarchical recipe dependency graphs for Factorio: machines, throughput, and raw-resource totals from a target item and rate."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Loren Carvalho" }]
keywords = ["factorio", "recipe", "graph", "production", "ratio-calculator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/lorencarvalho/factorio-recipe-graph"
Repository = "https://github.com/lorencarvalho/factorio-recipe-graph"
Issues = "https://github.com/lorencarvalho/factorio-recipe-graph/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/factorio_recipe_graph"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=0.27.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
]

# ---------------------------------------------------------------------------
# Ruff – linter & formatter
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py311"
extend-exclude = ["context"]

[tool.ruff.lint]
# Rule sets: pyflakes (F), pycodestyle (E/W), isort (I), pyupgrade (UP),
# flake8-bugbear (B), flake8-comprehensions (C4), debugger (T10)
select = ["E", "W", "F", "I", "UP", "B", "C4", "T10"]

[tool.ruff.lint.isort]
known-first-party = ["factorio_recipe_graph"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# ty – type checker
# ---------------------------------------------------------------------------
[tool.ty.environment]
python-version = "3.11"

[tool.ty.src]
include = ["src/**/*.py", "scripts/**/*.py", "examples/**/*.py", "tests/**/*.py"]

[tool.ty.rules]
possibly-unresolved-reference = "warn"
unresolved-import = "warn"
division-by-zero = "error"

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -vv"
testpaths = ["tests"]
